syntax = "proto3";

option java_package = "com.swiftsnail.proto.generated";
option java_multiple_files = true;
// SPEED, CODE_SIZE, or LITE_RUNTIME
option optimize_for = SPEED;

message People {
    string name = 1;
    oneof id {
        string qq = 2;
        string web_chat = 3;
    }

    /*
    * key: website.
    * value: user name.
    */
    map<string, string> website_username = 4;
}